--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.6); /* Темный фон */
+  background-color: rgba(0, 0, 0, 0.9);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,10 +14,10 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); /* Центрирование */
+  transform: translate(-50%, -50%);
   background: white;
-  padding: 20px;
-  border-radius: 10px;
+  padding: 10px;
+  border-radius: 8px;
   max-width: 90vw;
   max-height: 90vh;
   display: flex;
@@ -34,22 +34,7 @@
 }
 
 .details {
-  margin-top: 10px;
+  margin-top: 5px;
   font-size: 16px;
   text-align: center;
-}
-
-.closeBtn {
-  margin-top: 15px;
-  padding: 8px 16px;
-  font-size: 14px;
-  background: #d32f2f;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.closeButton:hover {
-  background: #b71c1c;
 }
